improve api and add snackbar

--- a/frontend/src/components/AddUserForm/AddUserForm.css
+++ b/frontend/src/components/AddUserForm/AddUserForm.css
@@ -1,5 +1,5 @@
 #snackbar {
-  visibility: hidden;
+  /* visibility: hidden; */
   min-width: 250px;
   margin-left: -125px;
   background-color: #4db061;
@@ -14,7 +14,7 @@
 }
 
 #snackbar.show {
-  visibility: visible;
+  /* visibility: visible; */
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
