--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,35 +12,7 @@ code {
     monospace;
 }
 
-/* table {
-    border-collapse: collapse;
-    width: 500px;
-  }
-  
-  th, td, tr {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  th {
-    text-align: left;
-    background-color: #f2f2f2;
-  } */
-
-.user-row {
-  background-color: #f2f2f2;
-  border: 1px solid #ddd;
-  padding: 8px;
+nav {
+  flex-direction: column;
+  align-items: center;
 }
-
-/* form { 
-    padding: 10px;
-}
-
-input, select { 
-    margin: 10px;
-}
-
-button {
-    margin: 10px;
-} */
